--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "~2.1.5",
     "@rainbow-me/rainbowkit": "2.1.6",
     "@tanstack/react-query": "~5.59.15",
+    "@thirdweb-dev/wagmi-adapter": "^0.2.21",
     "@uniswap/sdk-core": "~5.8.2",
     "@uniswap/v2-sdk": "~4.6.1",
     "blo": "~1.2.0",
